fix: disable wrapping in hotspot name

--- a/src/app/editor/hotspot/hotspot.component.scss
+++ b/src/app/editor/hotspot/hotspot.component.scss
@@ -17,6 +17,7 @@
 
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &__buttons {
